// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge bg blue sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  background-color: #007aff;
  color: #fff;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

<div
  className="c0"
/>
`;

exports[`Badge bg blue-light sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  background-color: #cce4ff;
  color: #000;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

<div
  className="c0"
/>
`;

exports[`Badge bg green sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  background-color: #0a0;
  color: #fff;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

<div
  className="c0"
/>
`;

exports[`Badge bg green-light sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  background-color: #cceecc;
  color: #000;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

<div
  className="c0"
/>
`;

exports[`Badge bg orange sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  background-color: #f90;
  color: #fff;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

<div
  className="c0"
/>
`;

exports[`Badge bg orange-light sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  background-color: #ffebcc;
  color: #000;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

<div
  className="c0"
/>
`;

exports[`Badge bg red sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  background-color: #c00;
  color: #fff;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

<div
  className="c0"
/>
`;

exports[`Badge bg red-light sets background-color and color 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  background-color: #f5cccc;
  color: #000;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

<div
  className="c0"
/>
`;

exports[`Badge renders 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
}

<div
  className="c0"
/>
`;
